maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:21: error: class Tuple2 takes type parameters
def marquerSol(casee: Tuple2, numero:Int) {
                      ^ShortestPathMaze:21: error: class Tuple2 takes type parameters
def marquerSol(casee: Tuple2, numero:Int) {
                      ^